[gd_scene load_steps=9 format=4 uid="uid://bdl5m4r2ofety"]

[ext_resource type="Script" uid="uid://daaagw80o30tn" path="res://MainButtons.gd" id="1_bdwpk"]
[ext_resource type="FontFile" uid="uid://dfjm3jek6n0xx" path="res://upheaval/upheavtt.ttf" id="2_kk074"]
[ext_resource type="Texture2D" uid="uid://polw1khjbfkh" path="res://Assets/MainMenuTV.png" id="4_qoqlk"]
[ext_resource type="PackedScene" uid="uid://csranu1jq8ai1" path="res://tiles.tscn" id="5_7r1g0"]
[ext_resource type="PackedScene" uid="uid://rmt6ebxhjyyc" path="res://options.tscn" id="5_iwfq2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ntwl3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_frdab"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2nvp"]

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_top = 2.0
offset_right = 40.0
offset_bottom = 42.0
script = ExtResource("1_bdwpk")
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = 91.0
offset_right = 354.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_kk074")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_ntwl3")
text = "Start"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Options" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 75.0
offset_top = 178.0
offset_right = 453.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kk074")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_frdab")
text = "Options"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 78.0
offset_top = 268.0
offset_right = 276.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kk074")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_frdab")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h2nvp")
text = "Quit"
flat = true
metadata/_edit_use_anchors_ = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -2
position = Vector2(841, 73)
amount = 25
lifetime = 1.93
preprocess = 0.73
fixed_fps = 60
emission_shape = 3
emission_rect_extents = Vector2(10, 1)
scale_amount_min = 3.25
scale_amount_max = 20.35
color = Color(0.360251, 0.624579, 0.914235, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(285, 255)
scale = Vector2(9.89028, 10.68)
texture = ExtResource("4_qoqlk")

[node name="Options" parent="." instance=ExtResource("5_iwfq2")]
visible = false

[node name="Level" parent="." instance=ExtResource("5_7r1g0")]
z_index = -3
tile_map_data = PackedByteArray("AAANAAoAAAAGAAAAAAAMAAoAAAAFAAAAAAALAAoAAAAFAAAAAAAHAAoAAAAFAAAAAAAGAAoAAAAFAAAAAAAFAAoAAAAFAAAAAAAEAAoAAAABAAUAAAADAAoAAAACAAUAAAACAAoAAAABAAUAAAABAAoAAAABAAUAAAAAAAoAAAAEAAAAAAAAAAsAAAAEAAIAAAABAAsAAAAFAAIAAAAAAAwAAAAEAAMAAAAAAA0AAAAEAAYAAAACAAsAAAAFAAIAAAADAAsAAAAFAAIAAAAEAAsAAAAFAAMAAAAFAAsAAAAFAAIAAAAGAAsAAAAFAAIAAAAHAAsAAAAFAAIAAAAIAAsAAAAFAAIAAAAJAAsAAAAFAAIAAAAKAAsAAAAFAAMAAAALAAsAAAAFAAIAAAAMAAsAAAAFAAMAAAAMAAwAAAAFAAIAAAALAAwAAAAFAAMAAAAKAAwAAAAFAAMAAAAJAAwAAAAFAAMAAAAIAAwAAAAFAAMAAAAHAAwAAAAFAAIAAAAGAAwAAAAFAAIAAAAFAAwAAAAFAAMAAAAEAAwAAAAFAAIAAAADAAwAAAAFAAMAAAACAAwAAAAFAAIAAAABAAwAAAAFAAMAAAABAA0AAAAFAAIAAAACAA0AAAAFAAMAAAADAA0AAAAFAAIAAAAEAA0AAAAFAAIAAAAFAA0AAAAFAAIAAAAGAA0AAAAFAAIAAAAHAA0AAAAFAAMAAAAIAA0AAAAFAAIAAAAJAA0AAAAFAAIAAAAKAA0AAAAFAAIAAAALAA0AAAAFAAIAAAAMAA0AAAAFAAIAAAANAAsAAAAGAAIAAAANAAwAAAAGAAMAAAAWAAUAAAACAAUAAAAXAAUAAAAFAAAAAAAVAAUAAAAEAAAAAAAVAAYAAAAEAAMAAAAVAAcAAAAEAAIAAAAVAAgAAAAEAAMAAAAVAAkAAAAEAAIAAAAVAAoAAAAEAAMAAAAVAAsAAAAEAAIAAAAVAAwAAAAEAAMAAAAVAA0AAAAEAAYAAAAWAA0AAAAFAAMAAAAWAAwAAAAFAAIAAAAWAAsAAAAFAAMAAAAWAAoAAAAFAAIAAAAWAAkAAAAFAAMAAAAWAAgAAAAFAAIAAAAWAAcAAAAFAAMAAAAWAAYAAAAFAAIAAAAXAAYAAAAFAAMAAAAXAAcAAAAFAAIAAAAXAAgAAAAFAAMAAAAXAAkAAAAFAAIAAAAXAAoAAAAFAAMAAAAXAAsAAAAFAAIAAAAXAAwAAAAFAAMAAAAXAA0AAAAFAAMAAAAOAA0AAAABAAYAAAAKAAgAAAABAAAAAAAKAAcAAAABAAEAAAAKAAYAAAABAAAAAAAKAAkAAAABAAIAAAALAAkAAAABAAIAAAAMAAkAAAABAAIAAAANAAkAAAABAAAAAAAOAAkAAAABAAAAAAAOAAoAAAABAAAAAAAOAAsAAAABAAAAAAAOAAwAAAABAAAAAAAPAAwAAAABAAAAAAAPAA0AAAACAAYAAAAQAA0AAAABAAYAAAARAA0AAAADAAYAAAASAA0AAAABAAYAAAATAA0AAAACAAYAAAAUAA0AAAABAAYAAAAUAAwAAAABAAAAAAAUAAsAAAABAAAAAAAUAAoAAAABAAAAAAAUAAkAAAABAAAAAAAUAAgAAAABAAAAAAAUAAcAAAABAAAAAAAUAAYAAAABAAAAAAAUAAUAAAABAAAAAAAUAAQAAAABAAAAAAAXAAQAAAABAAAAAAAXAAMAAAABAAAAAAAXAAIAAAABAAAAAAAXAAEAAAABAAAAAAAXAAAAAAABAAAAAAAWAAAAAAABAAAAAAAVAAAAAAABAAAAAAAUAAAAAAABAAAAAAATAAAAAAABAAAAAAASAAAAAAABAAAAAAARAAAAAAABAAAAAAAQAAAAAAABAAAAAAAPAAAAAAABAAAAAAAOAAAAAAABAAAAAAANAAAAAAABAAAAAAAMAAAAAAABAAAAAAALAAAAAAABAAAAAAAKAAAAAAABAAAAAAAJAAAAAAABAAAAAAAIAAAAAAABAAAAAAAHAAAAAAABAAAAAAAGAAAAAAABAAAAAAAFAAAAAAABAAAAAAAEAAAAAAABAAAAAAADAAAAAAABAAAAAAACAAAAAAABAAAAAAABAAAAAAABAAAAAAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAABAAkAAAABAAAAAAACAAkAAAABAAAAAAADAAkAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAIAAAAGAAkAAAABAAIAAAAHAAkAAAABAAIAAAAIAAkAAAABAAIAAAAJAAkAAAABAAIAAAAJAAgAAAABAAAAAAAIAAgAAAABAAAAAAAHAAgAAAABAAEAAAAGAAgAAAABAAEAAAAFAAgAAAABAAIAAAAEAAgAAAABAAIAAAADAAgAAAABAAAAAAACAAgAAAABAAAAAAABAAgAAAABAAAAAAABAAcAAAABAAAAAAACAAcAAAABAAAAAAADAAcAAAABAAAAAAAEAAcAAAABAAIAAAAFAAcAAAABAAAAAAAGAAcAAAABAAEAAAAHAAcAAAABAAEAAAAIAAcAAAABAAEAAAAJAAcAAAABAAEAAAALAAcAAAABAAEAAAAMAAcAAAABAAAAAAALAAgAAAABAAAAAAANAAcAAAABAAAAAAAOAAcAAAABAAAAAAAOAAgAAAABAAIAAAANAAgAAAABAAIAAAAMAAgAAAABAAIAAAAPAAgAAAABAAIAAAAPAAcAAAABAAIAAAAPAAkAAAABAAAAAAAPAAoAAAABAAAAAAAQAAoAAAABAAAAAAAQAAsAAAABAAAAAAAPAAsAAAABAAAAAAAQAAwAAAABAAAAAAARAAwAAAABAAAAAAARAAsAAAABAAAAAAASAAwAAAABAAAAAAATAAwAAAABAAAAAAATAAsAAAABAAAAAAASAAsAAAABAAAAAAARAAoAAAABAAAAAAASAAoAAAABAAIAAAATAAoAAAABAAAAAAATAAkAAAABAAAAAAASAAkAAAABAAIAAAARAAkAAAABAAEAAAAQAAkAAAABAAAAAAARAAgAAAABAAEAAAATAAgAAAABAAAAAAATAAcAAAABAAAAAAASAAcAAAABAAIAAAARAAcAAAABAAEAAAAQAAcAAAABAAIAAAAOAAYAAAABAAEAAAANAAYAAAABAAEAAAAMAAYAAAABAAEAAAALAAYAAAABAAEAAAAPAAYAAAABAAAAAAAQAAYAAAABAAIAAAARAAYAAAABAAIAAAASAAYAAAABAAIAAAATAAYAAAABAAAAAAATAAUAAAABAAAAAAASAAUAAAABAAIAAAARAAUAAAABAAIAAAAQAAUAAAABAAEAAAAPAAUAAAABAAEAAAAOAAUAAAABAAEAAAANAAUAAAABAAAAAAAMAAUAAAABAAAAAAALAAUAAAABAAAAAAALAAQAAAABAAAAAAAMAAQAAAABAAAAAAANAAQAAAABAAAAAAAOAAQAAAABAAAAAAAPAAQAAAABAAEAAAAQAAQAAAABAAEAAAARAAQAAAABAAEAAAASAAQAAAABAAIAAAATAAQAAAABAAEAAAATAAMAAAABAAIAAAAVAAMAAAABAAAAAAAUAAMAAAABAAEAAAASAAMAAAABAAIAAAARAAMAAAABAAIAAAAQAAMAAAABAAIAAAANAAMAAAABAAIAAAAMAAMAAAABAAIAAAALAAMAAAABAAIAAAALAAIAAAABAAAAAAALAAEAAAABAAEAAAAMAAEAAAABAAAAAAAMAAIAAAABAAEAAAANAAIAAAABAAIAAAAQAAIAAAABAAEAAAARAAIAAAABAAEAAAASAAIAAAABAAEAAAATAAIAAAABAAIAAAAUAAIAAAABAAIAAAAVAAIAAAABAAIAAAAWAAIAAAABAAIAAAAWAAEAAAABAAIAAAAVAAEAAAABAAIAAAAUAAEAAAABAAAAAAATAAEAAAABAAAAAAASAAEAAAABAAAAAAARAAEAAAABAAAAAAAQAAEAAAABAAAAAAAPAAEAAAABAAAAAAAOAAEAAAABAAAAAAANAAEAAAABAAAAAAAKAAEAAAABAAEAAAAJAAEAAAABAAEAAAAIAAEAAAABAAEAAAAHAAEAAAABAAEAAAAGAAEAAAABAAEAAAAFAAEAAAABAAEAAAAEAAEAAAABAAEAAAADAAEAAAABAAAAAAACAAEAAAABAAAAAAABAAEAAAABAAAAAAAKAAMAAAABAAIAAAAJAAMAAAABAAIAAAAIAAMAAAABAAIAAAAHAAMAAAABAAIAAAAHAAQAAAABAAIAAAAGAAQAAAABAAIAAAAFAAQAAAABAAIAAAAFAAUAAAABAAIAAAAEAAUAAAABAAIAAAAEAAYAAAABAAIAAAAOAAMAAAABAAAAAAAPAAMAAAABAAEAAAAPAAIAAAABAAAAAAAOAAIAAAABAAEAAAAWAAQAAAABAAAAAAAVAAQAAAABAAAAAAAQAAgAAAABAAAAAAASAAgAAAABAAAAAAAIAAoAAAAFAAAAAAAJAAoAAAABAAUAAAAKAAoAAAACAAUAAAANAA0AAAAFAAYAAAA=")

[node name="Details" parent="." instance=ExtResource("5_7r1g0")]
z_index = -2
tile_map_data = PackedByteArray("AAAKAAcAAAABAAEAAAAKAAYAAAABAAAAAAALAAkAAAABAAQAAAAMAAkAAAABAAQAAAAOAAoAAAAEAAQAAAAUAAUAAAACAAMAAAAXAAEAAAAGAAQAAAAVAAAAAAAFAAQAAAARAAAAAAAFAAQAAAAJAAAAAAAFAAQAAAACAAAAAAAFAAQAAAABAAcAAAABAAAAAAACAAcAAAABAAAAAAADAAcAAAABAAAAAAAEAAcAAAABAAIAAAAFAAcAAAABAAAAAAAGAAcAAAABAAEAAAAHAAcAAAABAAEAAAAIAAcAAAABAAEAAAAJAAcAAAABAAEAAAALAAgAAAACAAQAAAAMAAgAAAADAAQAAAAPAAgAAAADAAUAAAAWAAEAAAAGAAQAAAAVAAEAAAACAAEAAAARAAEAAAAFAAQAAAAJAAEAAAAFAAQAAAACAAEAAAAFAAQAAAAKAAMAAAABAAIAAAAJAAMAAAABAAIAAAAIAAMAAAABAAIAAAAHAAMAAAABAAIAAAAHAAQAAAABAAIAAAAGAAQAAAABAAIAAAAFAAQAAAABAAIAAAAFAAUAAAABAAIAAAAEAAUAAAABAAIAAAAEAAYAAAABAAIAAAATAAgAAAADAAUAAAARAAIAAAAAAAYAAAAWAAMAAAAEAAUAAAA=")

[connection signal="pressed" from="Control/Start" to="Control" method="_on_start_pressed"]
[connection signal="pressed" from="Control/Options" to="Control" method="_on_options_pressed"]
[connection signal="pressed" from="Control/Quit" to="Control" method="_on_quit_pressed"]
